@@ -1,0 +1,54 @@
+#X3D V3.1 utf8
+# X3D-to-ClassicVRML XSL translation autogenerated by X3dToVrml97.xslt
+# http://www.web3d.org/x3d/content/X3dToVrml97.xslt
+# Generated using XSLT processor: SAXON 9.1.0.6 from Saxonica
+
+PROFILE Immersive
+# [X3D] version=3.1
+# [X3D] noNamespaceSchemaLocation=http://www.web3d.org/specifications/x3d-3.1.xsd
+# [head]
+
+META "title" "PerFrameNotificationECMAScript.x3d"
+META "description" "This example shows how to use per-frame notification to produce a frame rate output in the Browser console"
+META "creator" "X3D Specification"
+META "translator" "Xeena VRML importer"
+META "translated" "23 February 2005"
+META "modified" "15 March 2008"
+META "subject" "X3D ECMAScript Script Authoring Interface (SAI)"
+META "identifier" "http://www.web3d.org/x3d/content/examples/Basic/ScriptConformance/PerFrameNotificationECMAScript.x3d"
+META "reference" "http://www.web3d.org/x3d/specifications/ISO-IEC-19777-1-X3DLanguageBindings-ECMAScript/Part1/examples.html#PerFrameNotification"
+META "generator" "Vrml97ToX3dNist, http://ovrt.nist.gov/v2_x3d.html"
+META "generator" "X3D-Edit 3.3, https://savage.nps.edu/X3D-Edit"
+META "license" "../license.html"
+
+# [Scene] ========== ========== ==========
+
+NavigationInfo { type [ "EXAMINE" "ANY" ] } ###  Default X3D NavigationInfo
+
+DEF SC Script {
+ ### Warning:  'var' declarations of variables are not persistent in contained ecmascript: code, values are lost after each call. Use <field> definitions instead.
+
+	url [ "ecmascript:
+// ### X3D Browser.print() not supported by all VRML97 viewers, instead simply use print()
+
+
+var lastStartTime;
+
+function initialize() {
+    date = new Date();
+    lastStartTime = date.getTime();
+}
+
+// Called each frame
+function prepareEvents() 
+{
+    date = new Date();
+    frameTime = (date.getTime() - lastStartTime) / 1000.0;
+    lastStartTime = date.getTime();
+    fps = 1.0 / frameTime;
+    Browser.println('FPS: ' + fps);
+}
+
+    
+" ]
+}
