@@ -1,3 +1,7 @@
+2013-06-11  Holger Seelig  <holger.seelig@yahoo.de>
+
+	* jsContext.cpp: 
+
 2013-06-10  Holger Seelig  <holger.seelig@yahoo.de>
 
 	* Script.cpp:
